# everrs

./: .gitignore  Cargo.toml  README.md  build.rs
.github/workflows/: nightly.yml  rust.yml  stable.yml
src/: bind.rs  chacha20poly1305.rs  lib.rs  x25519.rs
src/hacl/c89-compatible/: test.rs
