[package]
name = "everrs"
version = "0.1.0"
authors = ["Mathias Hall-Andersen"]
edition = "2018"
build = "build.rs"
exclude = ["README.md", "icon.png"]

[dependencies]
cty = "0.2.1"
zeroize = "1.1.0"
rand_core = "0.5.1"

[dev-dependencies]
proptest = "0.9.4"
rand = "0.7.3"

[build-dependencies]
cc = "1.0"