[package]
name = "everrs"
version = "0.2.0"
authors = ["Mathias Hall-Andersen"]
edition = "2018"
build = "build.rs"
exclude = ["README.md", "icon.png", ".github", ".cargo_vcs_info.json", ".gitignore"]
description = "Bindings for the HACL*/EverCrypt crypto library"
repository = "https://github.com/rot256/everrs"
license = "MIT"
keywords = ["no-std", "crypto"]

[dependencies]
cty = "0.2.1"
zeroize = "1.1.0"
rand_core = "0.5.1"

[dev-dependencies]
proptest = "0.9.4"

[build-dependencies]
cc = "1.0"

[features]
default = []

# build and optimize EverCrypt solely for the native CPU
# NOTE: the build might not run on other CPU-types,
# see e.g. https://gcc.gnu.org/onlinedocs/gcc/x86-Options.html for additional details.
native = []